lender/tests/fail/flatten_invariant.rs
// Test that Flatten with an invariant lend type fails covariance check.

use std::cell::Cell;

use lender::{Lend, Lender, Lending};

struct InvariantFlatten<L> {
    lender: L,
}

impl<'lend, L> Lending<'lend> for InvariantFlatten<L> {
    type Lend = &'lend Cell<Option<&'lend String>>;
}

impl<L> Lender for InvariantFlatten<L> {
    lender::covariance_check!();

    fn next(&mut self) -> Option<Lend<'_, Self>> {
        None
    }
}

fn main() {}
